--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,12 +8,9 @@
             <use href="./img/symbol-defs.svg#icon-chocolate"></use>
           </svg>
         </div>
-        <h3 class="about-title">Unsurpassed taste</h3>
+        <h3 class="about-title">Неперевершений смак</h3>
         <p class="about-text">
-          Crafted with the finest quality cocoa beans and a dedication to
-          perfection, each bite is a decadent experience that simply cannot be
-          matched. Savor the richness and complexity of our Unsurpassed Taste
-          and discover a new level of chocolate bliss.
+          Створений з найвищоякісних зерен кави та присвячений досягненню досконалості, кожен ковток - це розкішне відчуття, яке неможливо порівняти. Насолоджуйтесь насиченістю та складністю нашого Неперевершеного Смаку і відкрийте новий рівень кавового блаженства.
         </p>
       </li>
 
@@ -23,13 +20,9 @@
             <use href="./img/symbol-defs.svg#icon-coin"></use>
           </svg>
         </div>
-        <h3 class="about-title">Affordable price</h3>
+        <h3 class="about-title">Доступна ціна</h3>
         <p class="about-text">
-          Indulge in high-quality chocolate without breaking the bank with
-          Simply Chocolate's selection of affordable treats. Enjoy
-          mouth-watering truffles and velvety chocolate bars without sacrificing
-          taste or quality. Browse our selection and indulge in affordable
-          luxury today.
+          Насолоджуйтесь високоякісною кавою без значних витрат з асортиментом кави від Simply Coffee. Скоштуйте вишукані напої та оксамитові еспресо без втрати смаку чи якості. Перегляньте наш асортимент і насолодіться доступною розкішшю вже сьогодні.
         </p>
       </li>
 
@@ -39,12 +32,9 @@
             <use href="./img/symbol-defs.svg#icon-spoon"></use>
           </svg>
         </div>
-        <h3 class="about-title">Own production</h3>
+        <h3 class="about-title">Власне виробництво</h3>
         <p class="about-text">
-          We take pride in our own production process, ensuring that every step
-          is carefully crafted to perfection. From selecting the finest
-          ingredients to handcrafting each piece, our attention to detail is
-          evident in every bite.
+          Ми пишаємося нашим власним виробничим процесом, забезпечуючи ретельне опрацювання кожного етапу. Від вибору найкращих інгредієнтів до ручного приготування кожної порції – наша увага до деталей відчувається в кожному ковтку.
         </p>
       </li>
     </ul>
