--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container mobile-container main-header">
     <nav class="header-nav">
       <a href="./index.html" class="logo">
-        <span class="logo-style">SIMPLY</span> CHOCOLATE
+        <span class="logo-style">ПРОСТО</span> КАВА
         <svg class="logo-icon" width="24" height="24">
           <use href="./img/symbol-defs.svg#icon-chocolate-header"></use>
         </svg>
@@ -10,19 +10,22 @@
 
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-list-link current" href="#home">Home</a>
+          <a class="nav-list-link current" href="#home">Головна</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="#how-made">How it&apos;s made?</a>
+          <a class="nav-list-link" href="#how-made-scroll-container">Як це зроблено?</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="#our-products">Our products</a>
+          <a class="nav-list-link" href="#our-products">Каталог</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="#sellers">Top sellers</a>
+          <a class="nav-list-link" href="#sellers">Переваги</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="#reviews">Chocolate is loved</a>
+          <a class="nav-list-link" href="#reviews">Відгуки</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="#scroll">Контакти</a>
         </li>
       </ul>
     </nav>
