--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,7 +1,7 @@
 <section id="made-scroll" class="section made-section" id="how-made">
-  <div class="container">
+  <div class="container" id="how-made-scroll-container">
     <h2 class="made-titel">
-      how it's <span class="made-titel-right-part">made?</span>
+      як це <span class="made-titel-right-part"> зроблено?</span>
     </h2>
     <div class="made-saction-content">
       <div class="picture-gradient">
