--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,16 +1,13 @@
 <section class="bg-sub-img sub-section" id="subscribe">
   <div class="subscribe-container container">
     <div class="subscribe-text-container">
-      <h2 class="subscribe-title">EXPLORE OUR NEW <br />CHOCOLATE FIRST</h2>
+      <h2 class="subscribe-title">ВІДКРИЙ НАШУ <br />КАВУ ПЕРШИМ</h2>
       <p class="subscribe-text">
-        From the velvety texture to the rich and complex flavor, our New
-        Chocolate is a true indulgence that will leave you craving more. Made
-        with only the finest ingredients and handcrafted with the utmost care,
-        each piece is a work of art that is sure to please.
+        Від оксамитової текстури до насиченого та складного смаку, наша Нова Кава - це справжня розкіш, яка змусить вас бажати більшого. Створена лише з найвищоякісніших інгредієнтів та виготовлена з надзвичайною турботою, кожна порція - це справжній витвір мистецтва, який неодмінно вас вразить.
       </p>
     </div>
     <button class="subscribe-button" type="button" data-modal-open="explore">
-      Subscribe
+      Підписатись
     </button>
   </div>
 </section>
