--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,10 +2,32 @@
   padding: 32px 0;
   background-color: #1e1823;
 }
+.footer-flex-container {
+  display: block; 
+  .copyright{
+    font-size: 11px;
+    color: #fff;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+}
 
 @media only screen and (min-width: 768px) {
   .footer {
     padding: 50px 0;
+  }
+  .footer-flex-container {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    .copyright{
+      font-size: 11px;
+      color: #fff;
+      text-align: center;
+      margin-top: 0px;
+    }
+  
   }
 }
 
@@ -163,6 +185,12 @@
 .footer-nav-item:not(:last-child) {
   margin-bottom: 18px;
 }
+@media only screen and (min-width: 768px) {
+  .footer-nav-item:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
 
 .footer-nav-link:hover,
 .footer-nav-link:focus {
