--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -119,6 +119,17 @@
     padding-right: 40px;
   }
 }
+.hero-slogan{
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 1.21;
+  letter-spacing: -0.03em;
+  color: #ffffff;
+  width: 299px;
+  height: 72px;
+  margin-bottom: 232px;
+  text-align: center;
+}
 
 .hero-title {
   font-weight: 500;
@@ -132,6 +143,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .hero-slogan{
+    width: auto;
+    font-size: 50px;
+  }
   .hero-title {
     font-size: 28px;
     line-height: 1.21;
@@ -174,13 +189,13 @@
   align-items: flex-start;
   padding: 12px 28px;
   gap: 14px;
-  width: 120px;
+  width: 150px;
   height: 41px;
   padding: 12px 28px;
   background: #fd9222;
   border-radius: 100px;
   border: 0;
-  margin-right: 14px;
+  /* margin-right: 14px; */
   transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -193,7 +208,7 @@
 
 @media only screen and (min-width: 768px) {
   .buy-btn {
-    width: 144px;
+    width: 180px;
     height: 45px;
     padding: 14px 40px;
   }
