--- a/src/partials/explore.html
+++ b/src/partials/explore.html
@@ -34,16 +34,16 @@
 
     <form class="subscribe-form" name="explore_form">
       <p class="subscribe-modal-title">
-        EXPLORE OUR
-        <span class="subscribe-orange"><br />NEW CHOCOLATE</span> FIRST!
+        ВІДКРИЙ НАШУ
+        <span class="subscribe-orange"><br />НОВУ КАВУ</span> ПЕРШИМ!
       </p>
       <div class="subscribe-form-field">
         <input
           class="subcribe-input"
           type="email"
-          placeholder="Enter your email"
+          placeholder="Введіть ваш email"
         />
-        <button class="subscribe-modal-button" type="submit">Sumbit</button>
+        <button class="subscribe-modal-button" type="submit">Вперед!</button>
       </div>
     </form>
   </div>
