--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,12 +2,11 @@
   <div class="container">
     <div class="footer-box">
       <h2 class="footer-title">
-        <span class="footer-accent">Chocolate</span> a delicious cure for a bad
-        day
+        <span class="footer-accent">Кава</span> зробить ваш день кращим
       </h2>
       <div class="address-box">
         <address>
-          <p class="address-title">Contact us</p>
+          <p class="address-title">Контактуйте</p>
           <ul class="address-list">
             <li class="address-list-item">
               <a href="tel:+380684439426" class="address-link"
@@ -16,7 +15,7 @@
             </li>
             <li class="contacts-list-item">
               <a href="mailto:simplychoc@gmail.com" class="address-link"
-                >simplychoc@gmail.com</a
+                >simplycoffee@gmail.com</a
               >
             </li>
           </ul>
@@ -53,22 +52,26 @@
       </div>
     </div>
     <div class="footer-line"></div>
+    <div class="footer-flex-container">
     <ul class="footer-nav-list">
       <li class="footer-nav-item">
-        <a class="footer-nav-link" href="#home">Home</a>
+        <a class="footer-nav-link" href="#home">Головна</a>
       </li>
       <li class="footer-nav-item">
-        <a class="footer-nav-link" href="#how-made">How it&apos;s made?</a>
+        <a class="footer-nav-link" href="#how-made-scroll-container">Як це зроблено?</a>
       </li>
       <li class="footer-nav-item">
-        <a class="footer-nav-link" href="#our-products">Our products</a>
+        <a class="footer-nav-link" href="#our-products">Каталог</a>
       </li>
       <li class="footer-nav-item">
-        <a class="footer-nav-link" href="#sellers">Top sellers</a>
+        <a class="footer-nav-link" href="#sellers">Переваги</a>
       </li>
       <li class="footer-nav-item">
-        <a class="footer-nav-link" href="#reviews">Chocolate is loved</a>
+        <a class="footer-nav-link" href="#reviews">Відгуки</a>
       </li>
     </ul>
+    <div class="copyright">© 2025 CoffeeBuddy</div>
+    </div>
+
   </div>
 </footer>
