--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,22 @@
 <section class="hero">
   <div class="container hero-cont">
-    <h1 class="hero-title">
-      Treat yourself or a loved one to our finest ingredients for a moment of
-      pure delight!
-    </h1>
+<h1 class="hero-slogan">
+  Неперевершений аромат і смак!
+</h1>
+    <h2 class="hero-title">
+      Обирайте ідеальну каву для вашого настрою та моменту
+    </h2>
     <div class="hero-desc">
       <div class="buttons-hero">
         <button class="buy-btn" type="button" data-modal-open="sellers">
-          Buy now
+          Обрати каву
         </button>
-        <a href="#made-scroll">
-          <button class="made-btn" type="button">How it&#96;s made</button>
-        </a>
+        <!-- <a href="#made-scroll">
+          <button class="made-btn" type="button">Приготування</button>
+        </a> -->
       </div>
       <a class="scroll-btn" href="#scroll">
-        <p class="scroll-btn-txt">scroll down</p>
+        <p class="scroll-btn-txt">гортати вниз</p>
         <svg class="scroll-icon">
           <use href="./img/symbol-defs.svg#scroll"></use>
         </svg>
