--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -7,19 +7,19 @@
   <nav class="nav">
     <ul class="menu-nav-list">
       <li class="menu-nav-item">
-        <a class="menu-nav-link active" href="#home">Home</a>
+        <a class="menu-nav-link active" href="#home">Головна</a>
       </li>
       <li class="menu-nav-item">
-        <a class="menu-nav-link" href="#how-made">How it&apos;s made?</a>
+        <a class="menu-nav-link" href="#how-made-scroll-container">Як це зроблено?</a>
       </li>
       <li class="menu-nav-item">
-        <a class="menu-nav-link" href="#our-products">Our products</a>
+        <a class="menu-nav-link" href="#our-products">Каталог</a>
       </li>
       <li class="menu-nav-item">
-        <a class="menu-nav-link" href="#sellers">Top sellers</a>
+        <a class="menu-nav-link" href="#sellers">Переваги</a>
       </li>
       <li class="menu-nav-item">
-        <a class="menu-nav-link" href="#reviews">Chocolate is loved</a>
+        <a class="menu-nav-link" href="#reviews">Відгуки</a>
       </li>
     </ul>
   </nav>
