--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -44,34 +44,32 @@
         </button>
 
         <iframe
-          class="made-video video-is-hidden"
-          src="https://www.youtube.com/embed/jhOnA_80H94?&mute=1"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          data-video
-        ></iframe>
+        class="made-video video-is-hidden"
+        src="https://www.youtube.com/embed/epMDcqKoQys?start=63&autoplay=1&mute=1"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        data-video
+      ></iframe>
       </div>
       <div class="resipe-description">
         <p class="list-description">
-          Try our chocolates today and discover the perfect balance of flavor
+          Спробуйте нашу каву сьогодні і відкрийте для себе ідеальний баланс смаку
         </p>
         <ul class="made-list">
           <li class="made-list-item">
-            Heat the milk in a saucepan without bringing it to a boil. Add sugar
-            and cocoa powder.
+            Підготуйте професійну кавову машину та відміряйте точну порцію свіжообсмажених кавових зерен для еспресо.
+
           </li>
           <li class="made-list-item">
-            At the same time, prepare a water bath. Melt the butter on it.
+            Змеліть зерна до дрібного помелу, який відповідає стандартам приготування класичного еспресо.
           </li>
           <li class="made-list-item">
-            "Mix" the milk mixture and already liquid butter. Mix thoroughly
-            with a silicone spatula so that the mass becomes uniform and silky.
+            Утрамбуйте мелену каву у портафільтр рівномірно та щільно, створюючи ідеальне ущільнення.
           </li>
           <li class="made-list-item">
-            Heat the mixture over low heat, letting it barely boil.
+            Встановіть портафільтр у групову головку та запустіть процес екстракції під високим тиском.
           </li>
           <li class="made-list-item">
-            Pour the chocolate into special containers (can be replaced with ice
-            molds). Allow to cool and harden.
+            Слідкуйте за часом приготування, щоб отримати 30-35 мл насиченого та ароматного еспресо.
           </li>
         </ul>
       </div>
