--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,7 +1,7 @@
 <section class="sellers-desktop-container" id="sellers">
   <div class="container">
     <h2 class="sellers-section-title">
-      <span class="color-top">Top</span> Sellers
+      <span class="color-top">Чому</span> ми?
     </h2>
     <ul class="sellers-list">
       <li class="sellers-item">
@@ -36,9 +36,7 @@
           />
         </picture>
         <p class="sellers-text sellers-text-mobile">
-          Crazy enough chocolate originates from a bean just like the coffee
-          bean called Cacao. Cacao has been around for thousands of years and
-          was first discovered by the Native American tribe called the Mayans.
+          Дивовижно, але кава походить з насіння кавового дерева, батьківщиною якого є ефіопське нагір'я. За легендою, відкриття кави пов'язують з пастухом на ім'я Калді, який помітив підвищену активність кіз після вживання ягід невідомого куща.
         </p>
       </li>
       <li class="sellers-item">
@@ -94,9 +92,7 @@
     </ul>
     <div class="sellers-text-wrapper container">
       <p class="sellers-text sellers-text-tablet">
-        Crazy enough chocolate originates from a bean just like the coffee bean
-        called Cacao. Cacao has been around for thousands of years and was first
-        discovered by the Native American tribe called the Mayans.
+        Дивовижно, але кава походить з насіння кавового дерева, батьківщиною якого є ефіопське нагір'я. За легендою, відкриття кави пов'язують з пастухом на ім'я Калді, який помітив підвищену активність кіз після вживання ягід невідомого куща.
       </p>
       <button
         type="button"
