--- a/src/partials/taste.html
+++ b/src/partials/taste.html
@@ -2,14 +2,11 @@
   <div class="container taste-container">
     <div class="header-text">
       <h3 class="taste-header">
-        IT ALL ADDS UP TO ONE EXCEPTIONAL
-        <span class="color-taste">TASTE</span> SENSATION
+        ВСЕ ЦЕ СКЛАДАЄТЬСЯ В ОДНУ ВИНЯТКОВУ
+        <span class="color-taste">смакову</span> сенсацію
       </h3>
       <p class="taste-text">
-        At Simply Chocolate, we believe that the secret to exceptional chocolate
-        is in the details. From the sourcing of the finest ingredients to the
-        careful crafting of each individual piece, every step of our process
-        adds up to one exceptional taste sensation.
+        У Simply Coffee ми віримо, що секрет виняткової кави криється в деталях. Від пошуку найвищоякісніших інгредієнтів до старанного приготування кожної окремої порції, кожен крок нашого процесу складається в один винятковий смаковий досвід.
       </p>
     </div>
 
