--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,12 +10,12 @@
           <ul class="address-list">
             <li class="address-list-item">
               <a href="tel:+380684439426" class="address-link"
-                >+380 (68) 443-94-26</a
+                >+380 (66) 580-92-63</a
               >
             </li>
             <li class="contacts-list-item">
               <a href="mailto:simplychoc@gmail.com" class="address-link"
-                >simplycoffee@gmail.com</a
+                >coffeebuddy@gmail.com</a
               >
             </li>
           </ul>
