--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -13,9 +13,9 @@
       </svg>
     </button>
     <h2 class="feedback-thanks-titel">
-      thank you for&nbsp;your&nbsp;feedback!
+      дякуємо за відгук!
     </h2>
-    <p class="feedback-thanks-text">We are so happy to hear from you!</p>
+    <p class="feedback-thanks-text">Ми дуже раді чути вас!</p>
 
     <picture>
       <source
@@ -36,7 +36,7 @@
       <img
         class="feedback-thanks-img"
         src="./img/thanks_chocolate/chocolate-mob@1x.png"
-        alt="Pice of chocolate"
+        alt="Coffee"
       />
     </picture>
   </div>
