--- a/src/partials/leave-review.html
+++ b/src/partials/leave-review.html
@@ -7,14 +7,14 @@
     </button>
     <form class="review-form" name="reviews_form">
       <strong class="modal-review-title"
-        >leave a review about
-        <span class="strong-orang">our chocolate</span></strong
+        >залишити відгук про
+        <span class="strong-orang">нашу каву</span></strong
       >
       <label class="modal-review-field">
         <input
           class="modal-review-input"
           type="text"
-          placeholder="Name"
+          placeholder="Ім'я"
           name="user_name"
           minlength="2"
           required
@@ -24,7 +24,7 @@
         <input
           class="modal-review-input"
           type="text"
-          placeholder="Enter your email"
+          placeholder="Введіть свій email"
           name="user_email"
           title="example@gmail.com"
           minlength="2"
@@ -37,7 +37,7 @@
           <input
             class="modal-review-input input-ukr"
             type="text"
-            placeholder="| Phone number"
+            placeholder="| Тел номер"
             name="user_number"
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
             title="xxx-xxx-xx-xx"
@@ -53,10 +53,10 @@
       <textarea
         class="user-form-review"
         name="user-review"
-        placeholder="Enter text"
+        placeholder="Введіть текст"
         minlength="2"
       ></textarea>
-      <button class="send-btn" type="submit">Send</button>
+      <button class="send-btn" type="submit">Відправити</button>
     </form>
   </div>
 </div>
