--- a/src/partials/revives.html
+++ b/src/partials/revives.html
@@ -1,6 +1,6 @@
 <section class="section reviews-section" id="reviews">
   <h2 class="made-titel">
-    <span class="made-titel-right-part">chocolate</span> is loved
+    <span class="made-titel-right-part">люблять</span> каву
   </h2>
   <div class="container">
     <div class="rev swiper myswipernav">
@@ -15,10 +15,9 @@
             height="80"
           />
           <div class="reviews-user">
-            <h3 class="reviews-name">Victoria Dobrzhanska</h3>
+            <h3 class="reviews-name">Вікторія Добржанська</h3>
             <p class="reviews-text">
-              I love this chocolate bar. Perfect combination of light crispy
-              wafer, covered in a thin layer chocolate.
+              Найкраща колумбійська арабіка! М'який, витончений смак з легкою горчинкою. Професійна обжарка розкриває всі нюанси зерен.
             </p>
           </div>
         </div>
@@ -32,11 +31,9 @@
             height="80"
           />
           <div class="reviews-user">
-            <h3 class="reviews-name">Nazar Babenko</h3>
+            <h3 class="reviews-name">Назар Бабенко. Львів</h3>
             <p class="reviews-text">
-              This chocolate confection is a delight! A delight! The wafer is
-              light and crisp, the hazelnut cream is smooth, and the chocolate
-              is good.
+              Неймовірно насичений аромат кави, який одразу занурює в атмосферу комфорту. Широкий вибір допоміг знайти мій улюблений купаж.
             </p>
           </div>
         </div>
@@ -50,11 +47,9 @@
             height="80"
           />
           <div class="reviews-user">
-            <h3 class="reviews-name">Olena Kampusch</h3>
+            <h3 class="reviews-name">Олена Кампуш</h3>
             <p class="reviews-text">
-              Chocolate is a family favourite treat. Love the delicious smooth
-              chocolate and the creaminess inside. The wafer is soft but
-              crunchy.
+              Якісна кава з чудовим збалансованим смаком. Завжди свіжа обжарка, неймовірний аромат і м'яке повне тіло напою.
             </p>
           </div>
         </div>
@@ -68,11 +63,9 @@
             height="80"
           />
           <div class="reviews-user">
-            <h3 class="reviews-name">Natalia Sus</h3>
+            <h3 class="reviews-name">Наталія Сус</h3>
             <p class="reviews-text">
-              The chocolate assortment was delicious. Both dark and milk
-              chocolate pieces were smooth and just right on the sweetness
-              level.
+              Професійний підхід до обсмажування зберігає всю глибину смаку колумбійської арабіки. Тонка горчинка додає особливого шарму.
             </p>
           </div>
         </div>
@@ -86,11 +79,9 @@
             height="80"
           />
           <div class="reviews-user">
-            <h3 class="reviews-name">Danilo Nottingham</h3>
+            <h3 class="reviews-name">Daniel Nottingham. Sсotland</h3>
             <p class="reviews-text">
-              This is delicious. It so rich and flavorful you don&#39;t need to
-              use as many. I love topping an apple with almond butter and these
-              chips for a snack.
+              Unsurpassed coffee with a perfect roast. Economic coffee with an incredibly rich taste that lasts a long time
             </p>
           </div>
         </div>
@@ -104,10 +95,9 @@
             height="80"
           />
           <div class="reviews-user">
-            <h3 class="reviews-name">Irina Tydnyuk</h3>
+            <h3 class="reviews-name">Ірина Тидник</h3>
             <p class="reviews-text">
-              This is simply the best chocolate around, and I'm just thrilled to
-              support a local company! Best local chocolate - world class :)
+              Найкраща місцева кава світового рівня! Широкий асортимент задовольнить найвибагливіших поціновувачів кавових напоїв. :)
             </p>
           </div>
         </div>
@@ -116,7 +106,7 @@
     </div>
     <div class="button-wrapper">
       <button type="button" class="button-review" data-modal-open="reviews">
-        Leave a review
+        Залишити відгук
       </button>
     </div>
   </div>
