--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -5,89 +5,104 @@
     </h2>
     <ul class="sellers-list">
       <li class="sellers-item">
-        <picture class="sellers-picture">
-          <source
-            srcset="
-              ./img/top_sellers/desc-nuts_@1x.jpg 1x,
-              ./img/top_sellers/desc-nuts_@2x.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ./img/top_sellers/tabl-nuts_@1x.jpg 1x,
-              ./img/top_sellers/tabl-nuts_@2x.jpg 2x
-            "
-            media="(max-width: 1199px)"
-          />
-          <source
-            srcset="
-              ./img/top_sellers/mob-nuts_@1x.jpg 1x,
-              ./img/top_sellers/mob-nuts_@2x.jpg 2x
-            "
-            media="(max-width: 767px)"
-          />
-          <img
-            class="sellers-img"
-            src="./img/top_sellers/desc-nuts_@1x.jpg"
-            alt="nuts chocolate"
-            width="368"
-            height="464"
-          />
-        </picture>
+        <div class="sellers-item-wrapper">
+          <picture class="sellers-picture">
+            <source
+              srcset="
+                ./img/top_sellers/mob-roasted_@1x.jpg 1x,
+                ./img/top_sellers/mob-roasted_@2x.jpg 2x
+              "
+              media="(min-width: 1200px)"
+            />
+            <source
+              srcset="
+                ./img/top_sellers/mob-roasted_@1x.jpg 1x,
+                ./img/top_sellers/mob-roasted_@2x.jpg 2x
+              "
+              media="(max-width: 1199px)"
+            />
+            <source
+              srcset="
+                ./img/top_sellers/mob-roasted_@1x.jpg 1x,
+                ./img/top_sellers/mob-roasted_@2x.jpg 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              class="sellers-img"
+              src="./img/top_sellers/mob-roasted_@2x.jpg"
+              alt="nuts chocolate"
+              width="368"
+              height="464"
+            />
+          </picture>
+          <div class="sellers-overlay-text">
+            Свіжозмелені зерна
+          </div>
+        </div>
         <p class="sellers-text sellers-text-mobile">
           Дивовижно, але кава походить з насіння кавового дерева, батьківщиною якого є ефіопське нагір'я. За легендою, відкриття кави пов'язують з пастухом на ім'я Калді, який помітив підвищену активність кіз після вживання ягід невідомого куща.
         </p>
       </li>
       <li class="sellers-item">
+        <div class="sellers-item-wrapper">
         <picture class="sellers-picture">
           <source
             srcset="
-              ./img/top_sellers/desc-milk_@1x.jpg 1x,
-              ./img/top_sellers/desc-milk_@2x.jpg 2x
+              ./img/top_sellers/desc-range_@1x.jpg 1x,
+              ./img/top_sellers/desc-range_@2x.jpg 2x
             "
             media="(min-width: 1200px)"
           />
           <source
             srcset="
-              ./img/top_sellers/tabl-milk_@1x.jpg 1x,
-              ./img/top_sellers/tabl-milk_@2x.jpg 2x
+              ./img/top_sellers/desc-range_@1x.jpg 1x,
+              ./img/top_sellers/desc-range_@2x.jpg 2x
             "
             media="(max-width: 1199px)"
           />
           <source
             srcset="
-              ./img/top_sellers/mob-milk_@1x.jpg 1x,
-              ./img/top_sellers/mob-milk_@2x.jpg 2x
+              ./img/top_sellers/desc-range_@1x.jpg 1x,
+              ./img/top_sellers/desc-range_@2x.jpg 2x
             "
             media="(max-width: 767px)"
           />
           <img
             class="sellers-img"
-            src="./img/top_sellers/desc-milk_@1x.jpg"
+            src="./img/top_sellers/desc-range_@1x.jpg"
             alt="milk chocolate"
             width="368"
             height="464"
           />
         </picture>
+        <div class="sellers-overlay-text">
+          Широкий вибір сортів
+        </div>
+      </div>
       </li>
       <li class="sellers-item">
+        <div class="sellers-item-wrapper">
         <picture class="sellers-picture">
           <source
             srcset="
-              ./img/top_sellers/desc-choc_@1x.jpg 1x,
-              ./img/top_sellers/desc-choc_@2x.jpg 2x
+              ./img/top_sellers/desc-coffee_@1x.jpg 1x,
+              ./img/top_sellers/desc-coffee_@2x.jpg 2x
             "
           />
 
           <img
             class="sellers-img"
-            src="./img/top_sellers/desc-choc_@1x.jpg"
+            src="./img/top_sellers/desc-coffee_@1x.jpg"
             alt="dark chocolate"
             width="368"
             height="464"
           />
         </picture>
+        <div class="sellers-overlay-text">
+          Швидка доставка
+        </div>
+      </div>
       </li>
     </ul>
     <div class="sellers-text-wrapper container">
@@ -99,7 +114,7 @@
         class="sellers-buy-now-btn desk-btn"
         data-modal-open="sellers"
       >
-        Buy now
+        Замовити
       </button>
     </div>
   </div>
