--- a/src/partials/thank-you.html
+++ b/src/partials/thank-you.html
@@ -10,10 +10,9 @@
       </svg>
     </button>
     <div class="thanks-box-text">
-      <h2 class="thanks-titel">thank you!</h2>
+      <h2 class="thanks-titel">Дякуємо вам!</h2>
       <p class="thanks-text">
-        We are glad that you ordered our chocolate and we are giving you a 20%
-        discount on all our products.
+        Ми раді, що ви замовили нашу каву і даруємо вам знижку 20% на всю продукцію
       </p>
     </div>
 
