--- a/src/css/sellers.css
+++ b/src/css/sellers.css
@@ -35,6 +35,19 @@
   border-radius: 15px;
   overflow: hidden;
 }
+.sellers-overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 20px;
+    color: #472807;
+}
+
 
 .sellers-text-wrapper {
   display: flex;
@@ -79,7 +92,12 @@
     flex-direction: column;
     align-items: center;
   }
-
+  .sellers-item-wrapper{
+    position: relative;
+  }
+  .sellers-picture > img{
+    height: 464px;
+  }
   .sellers-text-wrapper {
     display: flex;
     flex-direction: column;
@@ -101,7 +119,9 @@
   .sellers-section-title {
     margin-bottom: 32px;
   }
-
+  .sellers-picture > img{
+    height: 464px;
+  }
   .sellers-text-mobile {
     display: none;
   }
@@ -111,6 +131,9 @@
 
   .sellers-item {
     max-width: 344px;
+  }
+  .sellers-item-wrapper{
+    position: relative;
   }
 
   .sellers-text {
@@ -129,6 +152,12 @@
 
   .sellers-item {
     max-width: 368px;
+  }
+  .sellers-item-wrapper{
+    position: relative;
+  }
+  .sellers-picture > img{
+    height: 464px;
   }
 
   .sellers-item:last-child {
