--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -129,7 +129,7 @@
             <label class="modal-buy-now-label" for="order_feedback">Коментар</label>
             <textarea class="modal-buy-now-textarea" id="order_feedback" name="order_feedback"
                 placeholder="Введіть текст"></textarea>
-            <button class="modal-buy-now-btn" type="submit">Поїхали</button>
+            <button class="modal-buy-now-btn" type="submit">Замовити</button>
         </form>
     </div>
 </div>
