--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <a href="./index.html" class="logo">
         <span class="logo-style">ПРОСТО</span> КАВА
         <svg class="logo-icon" width="24" height="24">
-          <use href="./img/symbol-defs.svg#icon-chocolate-header"></use>
+          <use xlink:href="./img/symbol-defs.svg#icon-coffee"></use>
         </svg>
       </a>
 
