--- a/src/partials/leave-review.html
+++ b/src/partials/leave-review.html
@@ -24,7 +24,7 @@
         <input
           class="modal-review-input"
           type="text"
-          placeholder="Введіть свій email"
+          placeholder="Введіть email"
           name="user_email"
           title="example@gmail.com"
           minlength="2"
