--- a/src/partials/taste.html
+++ b/src/partials/taste.html
@@ -39,29 +39,24 @@
               alt="Milk Chocolate"
             />
           </picture>
-          <h2 class="title-taste">MILK CHOCOLATE</h2>
+          <h2 class="title-taste">Свіжомелена кава</h2>
         </div>
       </div>
       <div class="back">
         <div class="contents">
-          <h3 class="subtitle-taste">Milk chocolate</h3>
+          <h3 class="subtitle-taste">Свіжомелена кава</h3>
           <ul class="list-taste">
             <li>
               <button class="btn-taste active-taste" type="button">
-                chocolate
+                походження
               </button>
             </li>
             <li>
-              <button class="btn-taste" type="button">the benefits</button>
+              <button class="btn-taste" type="button">докладніше</button>
             </li>
           </ul>
           <p class="text-taste">
-            Milk chocolate is a solid chocolate confectionery containing cocoa,
-            sugar and milk. It is the most consumed type of chocolate. Chocolate
-            was originally sold and consumed as a beverage in pre-Columbian
-            times. Although four-fifths of all milk chocolate is sold in the
-            United States and Europe, increasingly large amounts are consumed in
-            China and Latin America.
+            Свіжозмелена кава - це ароматний, насичений напій з багатим смаковим профілем. Вона відзначається високим вмістом корисних антиоксидантів. На відміну від попередньо змелених сумішей, свіжозмелена кава має ширший спектр смакових відтінків.
           </p>
         </div>
       </div>
@@ -95,28 +90,22 @@
               alt="Milk"
             />
           </picture>
-          <h2 class="title-taste">MILK</h2>
+          <h2 class="title-taste">Молоко до кави</h2>
         </div>
       </div>
       <div class="back">
         <div class="contents">
-          <h3 class="subtitle-taste">Milk</h3>
+          <h3 class="subtitle-taste">Молоко до кави</h3>
           <ul class="list-taste">
             <li>
-              <button class="btn-taste active-taste" type="button">milk</button>
+              <button class="btn-taste active-taste" type="button">види</button>
             </li>
             <li>
-              <button class="btn-taste" type="button">the benefits</button>
+              <button class="btn-taste" type="button">докладніше</button>
             </li>
           </ul>
           <p class="text-taste">
-            Milk is a white liquid food produced by the mammary glands of
-            mammals. It is the primary source of nutrition for young mammals
-            (including breastfed human infants) before they are able to digest
-            solid food.Early-lactation milk, which is called colostrum, contains
-            antibodies that strengthen the immune system, and thus reduces the
-            risk of many diseases. Milk contains many nutrients, including
-            protein and lactose.
+            Молоко до кави — це ідеальне поєднання смаку та аромату. Воно пом’якшує гіркоту кави та додає ніжну вершкову нотку. Гаряче чи холодне, молоко підкреслює багатство кавових зерен. 
           </p>
         </div>
       </div>
@@ -150,27 +139,22 @@
               alt="Nuts"
             />
           </picture>
-          <h2 class="title-taste">NUTS</h2>
+          <h2 class="title-taste">Кава розчинна</h2>
         </div>
       </div>
       <div class="back">
         <div class="contents">
-          <h3 class="subtitle-taste">Nuts</h3>
+          <h3 class="subtitle-taste">Кава розчинна</h3>
           <ul class="list-taste">
             <li>
-              <button class="btn-taste active-taste" type="button">nuts</button>
+              <button class="btn-taste active-taste" type="button">виробники</button>
             </li>
             <li>
-              <button class="btn-taste" type="button">the benefits</button>
+              <button class="btn-taste" type="button">докладніше</button>
             </li>
           </ul>
           <p class="text-taste">
-            Almonds, pistachios, and walnuts are some types of nuts that contain
-            healthy nutrients. When eaten as part of a nutrient-dense diet,
-            these 9 nuts may offer benefits such as reducing your risk of heart
-            disease. They’re a good source of fiber, healthy fats, and plant
-            protein. Plus, they’re great on their own, paired with fruit, or
-            added to dishes like salads, desserts, and grains.
+            Розчинна сублімована кава - практичний вибір. Вона зберігає аромат та корисні властивості, легко розчиняється. Компактна упаковка робить її зручною для зберігання та використання.
           </p>
         </div>
       </div>
@@ -204,29 +188,24 @@
               alt="Semi - sweet chocolate"
             />
           </picture>
-          <h2 class="title-taste">SEMI - SWEET CHOCOLATE</h2>
+          <h2 class="title-taste">ВЛАСНЕ ОБЖАРЮВАННЯ</h2>
         </div>
       </div>
       <div class="back">
         <div class="contents">
-          <h3 class="subtitle-taste">semi - sweet chocolate</h3>
+          <h3 class="subtitle-taste">ВЛАСНЕ ОБЖАРЮВАННЯ</h3>
           <ul class="list-taste">
             <li>
               <button class="btn-taste active-taste" type="button">
-                sweet chocolate
+                особливості
               </button>
             </li>
             <li>
-              <button class="btn-taste" type="button">the benefits</button>
+              <button class="btn-taste" type="button">докладніше</button>
             </li>
           </ul>
           <p class="text-taste">
-            Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of
-            the best ways to gain an understanding of this type of chocolate is
-            to compare it to a different type of chocolate. Semisweet is darker
-            than milk chocolate. In a taste comparison, it has a slightly bitter
-            taste whereas milk chocolate is sweeter and more mellow. This
-            delectable flavor of chocolate is very versatile.
+                        Зерна кави власного обжарювання — це свіжість і унікальний смак у кожній чашці. Ми обираємо найкращі сорти і обжарюємо їх з любов’ю до деталей. 
           </p>
         </div>
       </div>
