--- a/src/css/product.css
+++ b/src/css/product.css
@@ -70,6 +70,9 @@
   font-size: 18px;
   background: #fff;
 }
+.product-button.details{
+  background: #fd9222;
+}
 
 @media screen and (min-width: 768px) {
   .swiper-slide.prod {
