--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <a href="./index.html" class="logo">
         <span class="logo-style">ПРОСТО</span> КАВА
         <svg class="logo-icon" width="24" height="24">
-          <use xlink:href="./img/symbol-defs.svg#icon-coffee"></use>
+          <use xlink:href="./img/symbol-defs.svg#icon-ukraine"></use>
         </svg>
       </a>
 
@@ -29,7 +29,9 @@
         </li>
       </ul>
     </nav>
-
+    <button class="header-buy-btn"  type="button" data-modal-open="sellers">
+      Обрати каву
+    </button>
     <ul class="socials-list">
       <li class="socials-list-item">
         <a
