--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,114 +1,138 @@
 <section class="section products-section" id="our-products">
   <div class="container">
     <h2 class="made-titel">
-      Our <span class="made-titel-right-part">pRODUCTS</span>
+      Наш <span class="made-titel-right-part">каталог</span>
     </h2>
 
     <div class="swiper myswwiper">
       <ul class="swiper-wrapper">
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/desc-orange_@1x.jpg"
+            srcset="./img/products/lavazza_oro_@1x.jpg"
             class="photo"
-            src="./img/products/desc-orange_@2x.jpg"
+            src="./img/products/lavazza_oro_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">orange</strong>
-          <p class="product-card-subtitle">Dark chocolate</p>
-          <button class="product-button">45 UAH</button>
+          <strong class="product-name">LAVAZZA ORO</strong>
+          <p class="product-card-subtitle">Кава мелена 250 г</p>
+          <div class="product-buttons">
+              <button class="product-button">284 UAH</button>
+              <button class="product-button details">Докладніше</button>
+        </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/desc-apple_@1x.jpg"
+            srcset="./img/products/lavazza-rossa_@1x.jpg"
             class="photo"
-            src="./img/products/desc-apple_@2x.jpg"
+            src="./img/products/lavazza-rossa_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">APPLE&#38;CRANBERRY</strong>
-          <p class="product-card-subtitle">Milk chocolate</p>
-          <button class="product-button">50 UAH</button>
+          <strong class="product-name">LAVAZZA ROSSA</strong>
+          <p class="product-card-subtitle">Кава мелена 250 г</p>
+         <div class="product-buttons">
+            <button class="product-button">202 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/desc-lime_@1x.jpg"
+            srcset="./img/products/cavarro-cremoso_@1x.jpg"
             class="photo"
-            src="./img/products/desc-lime_@2x.jpg"
+            src="./img/products/cavarro-cremoso_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">lime&#38;sea salt</strong>
-          <p class="product-card-subtitle">Dark chocolate</p>
-          <button class="product-button">66 UAH</button>
+          <strong class="product-name">Кава Cavarro в зернах</strong>
+          <p class="product-card-subtitle">Cremoso 1 кг + чашка американо з блюдцем</p>
+          <div class="product-buttons">
+            <button class="product-button">912 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/desc-pineapple_@1x.jpg"
+            srcset="./img/products/maccoffee_@1x.jpg"
             class="photo"
-            src="./img/products/desc-pineapple_@2x.jpg"
+            src="./img/products/maccoffee_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">pineapple</strong>
-          <p class="product-card-subtitle">Dark chocolate</p>
-          <button class="product-button">54 UAH</button>
+          <strong class="product-name">Кава MacCoffee Gold</strong>
+          <p class="product-card-subtitle">280 г</p>
+          <div class="product-buttons">
+            <button class="product-button">259 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/classic-desc_@1x.jpg"
+            srcset="./img/products/carte-noir_@1x.jpg"
             class="photo"
-            src="./img/products/classic-desc_@2x.jpg"
+            src="./img/products/carte-noir_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">Classic</strong>
-          <p class="product-card-subtitle">Milk chocolate</p>
-          <button class="product-button">45 UAH</button>
+          <strong class="product-name">Carte Noire Classic</strong>
+          <p class="product-card-subtitle">Кава розчинна 140+50 г</p>
+          <div class="product-buttons">
+            <button class="product-button">484 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/honey-desc_@1x.jpg"
+            srcset="./img/products/Ambassador-Premium_1x.jpg"
             class="photo"
-            src="./img/products/honey-desc_@2x.jpg"
+            src="./img/products/Ambassador-Premium_2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">Honey</strong>
-          <p class="product-card-subtitle">Milk chocolate</p>
-          <button class="product-button">50 UAH</button>
+          <strong class="product-name">Ambassador Premium</strong>
+          <p class="product-card-subtitle">Кава розчинна 190 г</p>
+          <div class="product-buttons">
+            <button class="product-button">245 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/roasted-desc_@1x.jpg"
+            srcset="./img/products/Jacobs-Cronat_@1x.jpg"
             class="photo"
-            src="./img/products/roasted-desc_@2x.jpg"
+            src="./img/products/Jacobs-Cronat_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">roasted fruits</strong>
-          <p class="product-card-subtitle">Dark chocolate</p>
-          <button class="product-button">66 UAH</button>
+          <strong class="product-name">Jacobs Cronat Kraftig</strong>
+          <p class="product-card-subtitle">Кава розчинна 190 г</p>
+          <div class="product-buttons">
+            <button class="product-button">327 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
         <li class="swiper-slide prod">
           <img
-            srcset="./img/products/white-classic-desc_@1x.jpg"
+            srcset="./img/products/zguschene-moloko_@1x.jpg"
             class="photo"
-            src="./img/products/white-classic-desc_@2x.jpg"
+            src="./img/products/zguschene-moloko_@2x.jpg"
             alt="Photo"
             width="230"
             height="201"
           />
-          <strong class="product-name">Classic</strong>
-          <p class="product-card-subtitle">White chocolate</p>
-          <button class="product-button">54 UAH</button>
+          <strong class="product-name">Петрівська Слобода</strong>
+          <p class="product-card-subtitle">3 в 1 з ароматом згущене молоко </p>
+          <div class="product-buttons">
+            <button class="product-button">202 UAH</button>
+            <button class="product-button details">Докладніше</button>
+          </div>
         </li>
       </ul>
       <div class="swiper-pagination product"></div>
