--- a/src/css/product.css
+++ b/src/css/product.css
@@ -73,6 +73,12 @@
 .product-button.details{
   background: #fd9222;
 }
+.product-button:hover{
+  background: #fd9222;
+}
+.product-button.details:hover{
+  background: #fff;
+}
 
 @media screen and (min-width: 768px) {
   .swiper-slide.prod {
