--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,12 +9,12 @@
           <p class="address-title">Контактуйте</p>
           <ul class="address-list">
             <li class="address-list-item">
-              <a href="tel:+380684439426" class="address-link"
+              <a href="tel:+380665809263" class="address-link"
                 >+380 (66) 580-92-63</a
               >
             </li>
             <li class="contacts-list-item">
-              <a href="mailto:simplychoc@gmail.com" class="address-link"
+              <a href="mailto:coffeebuddy@gmail.com" class="address-link"
                 >coffeebuddy@gmail.com</a
               >
             </li>
