--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -117,6 +117,7 @@
   .hero-cont {
     padding-left: 40px;
     padding-right: 40px;
+    position: relative;
   }
 }
 .hero-slogan{
@@ -127,8 +128,9 @@
   color: #ffffff;
   width: 299px;
   height: 72px;
-  margin-bottom: 232px;
   text-align: center;
+  position: absolute;
+  top: 170px;
 }
 
 .hero-title {
@@ -139,13 +141,20 @@
   color: #ffffff;
   width: 299px;
   height: 72px;
-  margin-bottom: 32px;
+ 
 }
 
 @media only screen and (min-width: 768px) {
   .hero-slogan{
     width: auto;
     font-size: 50px;
+    top: 230px;
+    left: 100px;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 1.21;
+    letter-spacing: -0.03em;
+    position: absolute;
   }
   .hero-title {
     font-size: 28px;
@@ -154,6 +163,21 @@
     height: 102px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero-slogan{
+    width: auto;
+    font-size: 50px;
+    top: 100px;
+    left: 250px;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 1.21;
+    letter-spacing: -0.03em;
+    position: absolute;
+  }
+
+}
+
 
 .hero-desc {
   display: flex;
