--- a/src/css/taste.css
+++ b/src/css/taste.css
@@ -117,6 +117,7 @@
 .card-taste .front .img-taste {
     margin: 0 auto;
     margin-bottom: 25px;
+    height: 171px;
 }
 
 .card-taste .contents .title-taste {
