--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <button class="header-buy-btn"  type="button" data-modal-open="sellers">
-      Обрати каву
+      Замовити
     </button>
     <ul class="socials-list">
       <li class="socials-list-item">
