--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -10,7 +10,10 @@
         </div>
         <h3 class="about-title">Неперевершений смак</h3>
         <p class="about-text">
-          Створений з найвищоякісних зерен кави та присвячений досягненню досконалості, кожен ковток - це розкішне відчуття, яке неможливо порівняти. Насолоджуйтесь насиченістю та складністю нашого Неперевершеного Смаку і відкрийте новий рівень кавового блаженства.
+          Створений з найвищоякісних зерен кави та присвячений досягненню
+          досконалості, кожен ковток - це розкішне відчуття, яке неможливо
+          порівняти. Насолоджуйтесь насиченістю та складністю нашого
+          Неперевершеного Смаку і відкрийте новий рівень кавового блаженства.
         </p>
       </li>
 
@@ -22,7 +25,10 @@
         </div>
         <h3 class="about-title">Доступна ціна</h3>
         <p class="about-text">
-          Насолоджуйтесь високоякісною кавою без значних витрат з асортиментом кави від Simply Coffee. Скоштуйте вишукані напої та оксамитові еспресо без втрати смаку чи якості. Перегляньте наш асортимент і насолодіться доступною розкішшю вже сьогодні.
+          Насолоджуйтесь високоякісною кавою без значних витрат з асортиментом
+          кави від Simply Coffee. Скоштуйте вишукані напої та оксамитові еспресо
+          без втрати смаку чи якості. Перегляньте наш асортимент і насолодіться
+          доступною розкішшю вже сьогодні.
         </p>
       </li>
 
@@ -34,7 +40,10 @@
         </div>
         <h3 class="about-title">Власне виробництво</h3>
         <p class="about-text">
-          Ми пишаємося нашим власним виробничим процесом, забезпечуючи ретельне опрацювання кожного етапу. Від вибору найкращих інгредієнтів до ручного приготування кожної порції – наша увага до деталей відчувається в кожному ковтку.
+          Ми пишаємося нашим власним виробничим процесом, забезпечуючи ретельне
+          опрацювання кожного етапу. Від вибору найкращих інгредієнтів до
+          ручного приготування кожної порції – наша увага до деталей
+          відчувається в кожному ковтку.
         </p>
       </li>
     </ul>
